# open-inventory

./: .gitignore  CMakeLists.txt  database.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  usersession.h
models/: basemodel.cpp  basemodel.h  category.cpp  category.h  order.h  orderitem.cpp  orderitem.h  product.cpp  product.h  productimage.cpp  productimage.h  sale.cpp  sale.h  shop.cpp  shop.h  shopmanager.cpp  shopmanager.h  subcategory.cpp  subcategory.h  user.cpp  user.h  userlocation.cpp  userlocation.h
sql/: 0001_initial.sql
ui/auth/: logindialog.cpp  logindialog.h  logindialog.ui  signupdialog.cpp  signupdialog.h  signupdialog.ui
ui/shop/: createproductdialog.cpp  createproductdialog.h  createproductdialog.ui  createshopwizard.cpp  createshopwizard.h  createshopwizard.ui  emptystatewidget.cpp  emptystatewidget.h  emptystatewidget.ui  productpage.cpp  productpage.h  productpage.ui  shopitem.cpp  shopitem.h  shopselectiondialog.cpp  shopselectiondialog.h  shopselectiondialog.ui
